package SKU;

public enum Location {
    A1, A2, A3,
    B1, B2, B3,
    C1, C2, C3
}
