package skutask;

/**
 * Represents the priority levels of a SKU task.
 */
//@@author heehaw1234
public enum Priority {
    HIGH, MEDIUM, LOW
}
